--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ header {
     transition: transform 0.2s ease;
     background-color: rgb(0, 129, 129);
     border-radius: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+    font-weight: 600;
 } .sidebar-button:hover {
     background: fixed;
     background-color: rgb(0, 124, 124);
@@ -47,6 +50,14 @@ body {
     margin: 20px;
     width: fit-content;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.cursor {
+    animation: blink 1s infinite;
+}
+@keyframes blink {
+    0%, 50% { opacity: 1; }
+    50.1%, 100% { opacity: 0; }
 }
 
 .main-content {
