--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-header {
-}
-
 .sidebar {
     display: flex;
     flex-direction: column;
@@ -31,29 +28,30 @@ header {
     background: fixed;
     background-color: rgb(0, 124, 124);
     border-radius: 10px;
+    box-shadow: 0 0 10px rgb(0, 124, 124);
 }
 
 body {
     margin: 0;
     display: flex;
     min-height: 100vh;
+    overflow: hidden; /* on empêche le scroll global */
     font-family: sans-serif;
     background-color: rgb(16, 149, 142);
 }
 
 #title {
     font-family: 'Courier New', Courier, monospace;
-    background-color: #000;
+    background-color: #121212;
     /* color: #33ff33;*/
-    color: white;
+    color: rgb(227, 227, 227);
     font-size: 14px;
     padding: 10px 20px;
     border-radius: 4px; /* optionnel, mets 0 si tu veux du full carré */
-    margin: 20px;
+    margin: 2%;
     width: fit-content;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px #121212e7;
 }
-
 .cursor {
     animation: blink 1s infinite;
 }
@@ -63,15 +61,42 @@ body {
 }
 
 .main-content {
-    flex: 1; /* prend tout l’espace dispo */
     display: flex;
     justify-content: center; /* centre horizontalement */
     align-items: center;     /* centre verticalement */
-    padding: 5%;
-    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    max-height: 80vh;
+    text-align: left;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #121212;
+    border-radius: 10px;
+    color: rgb(227, 227, 227);
+    font-size: 14px;
+    box-shadow: 0 0 10px #121212e7;
+    overflow-y: auto;
 }
 .body-content {
     flex: 1;
     display: flex;
     flex-direction: column;
+}
+
+.main-content::-webkit-scrollbar {
+    width: 8px; /* largeur de la scrollbar */
+}
+  
+.main-content::-webkit-scrollbar-track {
+    background: #111; /* fond de la scrollbar */
+    border-radius: 4px;
+}
+  
+.main-content::-webkit-scrollbar-thumb {
+    background-color: rgb(227, 227, 227); /* couleur de la barre */
+    border-radius: 4px;
+    border: 2px solid #111; /* petit contour */
 }
