--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@
     background-color: rgb(0, 124, 124);
     border-radius: 10px;
     box-shadow: 0 0 10px rgb(0, 124, 124);
+} .sidebar-button:active {
+    background: fixed;
+    background-color: rgb(0, 119, 119);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(0, 112, 112);
 }
 
 body {
